# ds-u2-actividad-1-listasenlazadassimples-AguilarHernandezJesusAlejandro

./: ArduinoSimulador.cpp  ArduinoSimulador.h  CMakeLists.txt  DISEÑO_ARQUITECTURA.txt  Doxyfile.in  INSTRUCCIONES_RAPIDAS.txt  ListaGestion.cpp  ListaGestion.h  ListaSensor.h  Makefile  README.md  SensorBase.cpp  SensorBase.h  SensorPresion.cpp  SensorPresion.h  SensorTemperatura.cpp  SensorTemperatura.h  arduino_sensor_example.ino  build.sh  main.cpp
